# SBOM-Checker

./: .gitignore  CLAUDE.md  IMPLEMENTATION_LOG.md  README.md  pyproject.toml
.claude/commands/: check-sbom.md  scan-cmake.md
.claude/skills/validating-sbom-coverage/: SKILL.md
clinic-bot/: book.py  run_booking.sh
reports/: DELIVERY_MANIFEST.md  METRICS_SUMMARY.txt  README.txt  SBOM_Validation_Summary_v5.5.0.md  SBOM_Validation_Summary_v5.6.0.md  linux_final_report_v5.5.0.txt  plan_v5.6.0.md  sbom_report_v5.6.0.md  todo_v5.6.0.md  windows_final_report_v5.5.0.txt
src/sbom_checker/: __init__.py  bomc_xlsx_reviewer.py  cli.py  cmake_scanner.py  notice_reviewer.py  report.py  sbom_parser.py  sbom_review.py  sbom_review_linux.py  tpn_delta.py  tpn_generator.py  validator.py  xlsx_reviewer.py
