[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "sbom-checker"
version = "2.0.0"
description = "SBOM 驗證工具 — CSV 交叉驗證 (CMake) + Excel SBOM 審查 (UpdateXpress)"
requires-python = ">=3.8"
dependencies = [
    "openpyxl>=3.1",
]

[project.scripts]
sbom-checker = "sbom_checker.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
